--- a/view/style/style.css
+++ b/view/style/style.css
@@ -176,19 +176,24 @@ body{
 }
 .section-talk-bar-container{
     background: url(https://www.argali.com.br/wp-content/uploads/2017/09/WhatsApp.jpg);
-    width: 1200px;
-    height: 530px;
+    background-size: cover;
+    width: 100%;
+    height:600px;
     background-size: contain;
     overflow-y: scroll;
 }
 .user-bar-men-container{
-
+    width:auto;
+    height:auto;
 }
 #form-left-header{
+    position:fixed;
+    bottom:0px;
+    width:100%;
     background-color: #F0F0F0;
     display: flex;
     height: 60px;
-    padding-top: 10px;
+    padding-top: 30px;
 }
 #form-left-input{
     width: 800px;
